<resources>
    <string name="app_name">Formulário para Reserva de Laboratório</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scrollView">scrollView</string>

    <string name="identificao">Identificação</string>
    <string name="dadosReserva">Dados da Reserva</string>

    <string name="nomeProf">Nome do professor</string>
    <string name="siape">SIAPE</string>
    <string name="email">E-mail</string>
    <string name="dataReserva">Data da reserva</string>
    <string name="horarioReserva">Horário da reserva</string>
    <string name="selecioneLab">Selecione o laboratório</string>
    <string name="precisaDatashow">Vai precisar de datashow?</string>
    <string name="configuracaoDesejada">Configuração desejada dos computadores</string>
    <string name="reservaPrioritaria">Reserva prioritária?</string>
    <string name="observacao">Observação</string>

    <string name="nomeProfHint">Digite o seu nome</string>
    <string name="siapeHint">Digite o seu SIAPE</string>
    <string name="emailHint">Digite o seu e-mail</string>

    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="talvez">Talvez</string>

    <string name="androidStudioSDK">Android Studio + Android SDK</string>
    <string name="javaSDK">Java SDK</string>
    <string name="linux">Sistema Operacional Linux</string>
    <string name="windows">Sistema Operacional Windows</string>

    <string-array name="labs">
        <item>LEC01</item>
        <item>LEC02</item>
        <item>LCC01</item>
    </string-array>
</resources>
